src/routes/game/components/elements/playerHandCard/PlayerHandCard.module.css
.handCard {
  height: 12vh;
  overflow: visible;
  width: 16dvh;
  flex-shrink: 0;
}

@media (orientation: portrait) {
  .handCard {
    height: 12vh;
    width: 14%;
    flex-shrink: 0;
    min-width: 14%;
  }
}

.img {
  width: 100%;
  -webkit-user-drag: none;
  -khtml-user-drag: none;
  -moz-user-drag: none;
  -o-user-drag: none;
  border-radius: 1vh;
  border-radius: 1dvh;
  max-height: 100%;
  max-width: 100%;
  transition: box-shadow 0.25s, border-color 0.25s;
}

.imgContainer {
  position: absolute;
  height: 25vh;
  height: 25dvh;
  aspect-ratio: 2/3;
  transition: transform 0.25s;
}

.iconCol {
  display: flex;
  position: absolute;
  top: 3vh;
  left: -1.25vh;
  height: 10vh;
  top: 3dvh;
  left: -1.25dvh;
  height: 10dvh;
  justify-content: center;
  align-items: flex-start;
}

.icon {
  background-color: var(--near-black);
  border: var(--theme-primary) solid 1px;
  color: var(--white);
  border-radius: 5px;
  font-size: 1.5em;
  display: flex;
  align-items: center;
  justify-content: center;
  padding: 5px;
}

.border1 {
  border-color: deepskyblue;
  box-shadow: 0 0 4px 4px deepskyblue;
}

.border2 {
  border-color: red;
  box-shadow: 0 0 4px 4px red;
}

.border3 {
  border-color: var(--theme-primary);
  box-shadow: 0 0 4px 4px var(--theme-primary);
}

.border4 {
  border-color: gray;
  box-shadow: 0 0 4px 5px rgb(100, 100, 100);
}

.border5 {
  border-color: tan;
  box-shadow: 0 0 4px 4px tan;
}

.border6 {
  border-color: chartreuse;
  box-shadow: 0 0 4px 4px chartreuse;
}

.border7 {
  border-color: purple;
  box-shadow: 0 0 4px 4px purple;
}

.border8 {
  border-color: goldenrod;
  box-shadow: 0 0 5px 5px goldenrod;
}

.border9 {
  border-color: rgb(192, 6, 6);
  box-shadow: 0 0 5px 5px rgb(192, 6, 6);
}

